--- a/environment.yml
+++ b/environment.yml
@@ -3,287 +3,22 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - alsa-lib=1.2.3.2=h166bdaf_0
-  - anyio=3.6.1=py310hff52083_0
-  - aom=3.3.0=h27087fc_1
-  - appdirs=1.4.4=pyh9f0ad1d_0
-  - argon2-cffi=21.3.0=pyhd8ed1ab_0
-  - argon2-cffi-bindings=21.2.0=py310h5764c6d_2
-  - asttokens=2.0.5=pyhd8ed1ab_0
-  - attrs=21.4.0=pyhd8ed1ab_0
-  - audioread=2.1.9=py310hff52083_3
-  - babel=2.10.3=pyhd8ed1ab_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - beautifulsoup4=4.11.1=pyha770c72_0
-  - bleach=5.0.1=pyhd8ed1ab_0
-  - brotli=1.0.9=h166bdaf_7
-  - brotli-bin=1.0.9=h166bdaf_7
-  - brotlipy=0.7.0=py310h5764c6d_1004
-  - bzip2=1.0.8=h7f98852_4
-  - c-ares=1.18.1=h7f98852_0
-  - ca-certificates=2022.6.15=ha878542_0
-  - cached-property=1.5.2=hd8ed1ab_1
-  - cached_property=1.5.2=pyha770c72_1
-  - certifi=2022.6.15=py310hff52083_0
-  - cffi=1.15.1=py310h255011f_0
-  - charset-normalizer=2.1.0=pyhd8ed1ab_0
-  - cryptography=37.0.1=py310h9ce1e76_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - dbus=1.13.6=h5008d03_3
-  - debugpy=1.6.0=py310hd8f1fbe_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - executing=0.8.3=pyhd8ed1ab_0
-  - expat=2.4.8=h27087fc_0
-  - ffmpeg=5.0.1=h594f047_0
-  - flit-core=3.7.1=pyhd8ed1ab_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=hab24e00_0
-  - fontconfig=2.14.0=h8e229c2_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - fonttools=4.34.4=py310h5764c6d_0
-  - freetype=2.10.4=h0708190_1
-  - gettext=0.19.8.1=h73d1719_1008
-  - giflib=5.2.1=h36c2ea0_2
-  - glib=2.70.2=h780b84a_4
-  - glib-tools=2.70.2=h780b84a_4
-  - gmp=6.2.1=h58526e2_0
-  - gmpy2=2.1.2=py310h92f7908_0
-  - gnutls=3.6.13=h85f3911_1
-  - gst-plugins-base=1.20.2=hcf0ee16_0
-  - gstreamer=1.20.3=hd4edc92_0
   - h5py=3.7.0=nompi_py310h06dffec_100
-  - hdf5=1.12.1=nompi_h4df4325_104
-  - icu=69.1=h9c3ff4c_0
-  - idna=3.3=pyhd8ed1ab_0
-  - importlib-metadata=4.11.4=py310hff52083_0
-  - importlib_metadata=4.11.4=hd8ed1ab_0
-  - importlib_resources=5.8.0=pyhd8ed1ab_0
-  - iniconfig=1.1.1=pyh9f0ad1d_0
-  - ipykernel=6.15.1=pyh210e3f2_0
-  - ipython=8.4.0=py310hff52083_0
-  - ipython_genutils=0.2.0=py_1
   - ipywidgets=7.7.1=pyhd8ed1ab_0
-  - jedi=0.18.1=py310hff52083_1
-  - jinja2=3.1.2=pyhd8ed1ab_1
-  - joblib=1.1.0=pyhd8ed1ab_0
-  - jpeg=9e=h166bdaf_2
-  - json5=0.9.5=pyh9f0ad1d_0
-  - jsonschema=4.6.2=pyhd8ed1ab_0
-  - jupyter=1.0.0=py310hff52083_7
-  - jupyter_client=7.3.4=pyhd8ed1ab_0
-  - jupyter_console=6.4.4=pyhd8ed1ab_0
-  - jupyter_core=4.10.0=py310hff52083_0
-  - jupyter_server=1.18.1=pyhd8ed1ab_0
   - jupyterlab=3.4.3=pyhd8ed1ab_0
-  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
-  - jupyterlab_server=2.15.0=pyhd8ed1ab_0
-  - jupyterlab_widgets=1.1.1=pyhd8ed1ab_0
-  - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.3=py310hbf28c38_0
-  - krb5=1.19.3=h08a2579_0
-  - lame=3.100=h7f98852_1001
-  - lcms2=2.12=hddcbb42_0
-  - ld_impl_linux-64=2.36.1=hea4e1c9_2
-  - lerc=3.0=h9c3ff4c_0
-  - libblas=3.9.0=15_linux64_openblas
-  - libbrotlicommon=1.0.9=h166bdaf_7
-  - libbrotlidec=1.0.9=h166bdaf_7
-  - libbrotlienc=1.0.9=h166bdaf_7
-  - libcblas=3.9.0=15_linux64_openblas
-  - libclang=13.0.1=default_hc23dcda_0
-  - libcurl=7.83.1=h2283fc2_0
-  - libdeflate=1.12=h166bdaf_0
-  - libdrm=2.4.112=h166bdaf_0
-  - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=h516909a_1
-  - libevent=2.1.10=h28343ad_4
-  - libffi=3.4.2=h7f98852_5
-  - libflac=1.3.4=h27087fc_0
-  - libgcc-ng=12.1.0=h8d9b700_16
-  - libgfortran-ng=12.1.0=h69a702a_16
-  - libgfortran5=12.1.0=hdcd56e2_16
-  - libglib=2.70.2=h174f98d_4
-  - libgomp=12.1.0=h8d9b700_16
-  - libiconv=1.16=h516909a_0
-  - liblapack=3.9.0=15_linux64_openblas
-  - libllvm11=11.1.0=hf817b99_3
-  - libllvm13=13.0.1=hf817b99_2
-  - libnghttp2=1.47.0=he49606f_0
-  - libnsl=2.0.0=h7f98852_0
-  - libogg=1.3.4=h7f98852_1
-  - libopenblas=0.3.20=pthreads_h78a6416_0
-  - libopus=1.3.1=h7f98852_1
-  - libpciaccess=0.16=h516909a_0
-  - libpng=1.6.37=h753d276_3
-  - libpq=14.4=he2d8382_0
   - librosa=0.9.2=pyhd8ed1ab_0
-  - libsndfile=1.0.31=h9c3ff4c_1
-  - libsodium=1.0.18=h36c2ea0_1
-  - libssh2=1.10.0=ha35d2d1_2
-  - libstdcxx-ng=12.1.0=ha89aaad_16
-  - libtiff=4.4.0=hc85c160_1
-  - libuuid=2.32.1=h7f98852_1000
-  - libva=2.15.0=h166bdaf_0
-  - libvorbis=1.3.7=h9c3ff4c_0
-  - libvpx=1.11.0=h9c3ff4c_3
-  - libwebp=1.2.2=h3452ae3_0
-  - libwebp-base=1.2.2=h7f98852_1
-  - libxcb=1.13=h7f98852_1004
-  - libxkbcommon=1.0.3=he3ba5ed_0
-  - libxml2=2.9.12=h885dcf4_1
-  - libzlib=1.2.12=h166bdaf_1
-  - llvmlite=0.38.1=py310h58363a5_0
-  - lz4-c=1.9.3=h9c3ff4c_1
-  - markupsafe=2.1.1=py310h5764c6d_1
   - matplotlib=3.5.2=py310hff52083_0
-  - matplotlib-base=3.5.2=py310h5701ce4_0
-  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
-  - mistune=0.8.4=py310h6acc77f_1005
-  - mpc=1.2.1=h9f54685_0
-  - mpfr=4.1.0=h9202a9a_1
-  - mpmath=1.2.1=pyhd8ed1ab_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - mysql-common=8.0.29=h26416b9_1
-  - mysql-libs=8.0.29=hbc51c84_1
-  - nbclassic=0.4.3=pyhd8ed1ab_0
-  - nbclient=0.6.6=pyhd8ed1ab_0
-  - nbconvert=6.5.0=pyhd8ed1ab_0
-  - nbconvert-core=6.5.0=pyhd8ed1ab_0
-  - nbconvert-pandoc=6.5.0=pyhd8ed1ab_0
-  - nbformat=5.4.0=pyhd8ed1ab_0
-  - ncurses=6.3=h27087fc_1
-  - nest-asyncio=1.5.5=pyhd8ed1ab_0
-  - nettle=3.6=he412f7d_0
-  - notebook=6.4.12=pyha770c72_0
-  - notebook-shim=0.1.0=pyhd8ed1ab_0
-  - nspr=4.32=h9c3ff4c_1
-  - nss=3.78=h2350873_0
-  - numba=0.55.0=py310h00e6091_0
   - numpy=1.21.6=py310h45f3432_0
-  - openh264=2.1.1=h780b84a_0
-  - openjpeg=2.4.0=hb52868f_1
-  - openssl=3.0.5=h166bdaf_0
-  - packaging=21.3=pyhd8ed1ab_0
-  - pandas=1.4.3=py310h769672d_0
-  - pandoc=2.18=ha770c72_0
-  - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - patsy=0.5.2=pyhd8ed1ab_0
-  - pcre=8.45=h9c3ff4c_0
-  - pexpect=4.8.0=pyh9f0ad1d_2
-  - pickleshare=0.7.5=py_1003
-  - pillow=9.2.0=py310he619898_0
-  - pip=22.1.2=pyhd8ed1ab_0
-  - pluggy=1.0.0=py310hff52083_3
-  - pooch=1.6.0=pyhd8ed1ab_0
-  - prometheus_client=0.14.1=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.30=pyha770c72_0
-  - prompt_toolkit=3.0.30=hd8ed1ab_0
-  - psutil=5.9.1=py310h5764c6d_0
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - py=1.11.0=pyh6c4a22f_0
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pygments=2.12.0=pyhd8ed1ab_0
-  - pyopenssl=22.0.0=pyhd8ed1ab_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pyqt=5.12.3=py310hff52083_8
-  - pyqt-impl=5.12.3=py310h1f8e252_8
-  - pyqt5-sip=4.19.18=py310h122e73d_8
-  - pyqtchart=5.12=py310hfcd6d55_8
-  - pyqtwebengine=5.12.1=py310hfcd6d55_8
-  - pyrsistent=0.18.1=py310h5764c6d_1
-  - pysocks=1.7.1=py310hff52083_5
-  - pysoundfile=0.10.3.post1=pyhd3deb0d_0
-  - pytest=7.1.2=py310hff52083_0
   - python=3.10.5=ha86cf86_0_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-fastjsonschema=2.15.3=pyhd8ed1ab_0
-  - python_abi=3.10=2_cp310
-  - pytz=2022.1=pyhd8ed1ab_0
-  - pyzmq=23.2.0=py310h330234f_0
-  - qt=5.12.9=h1304e3e_6
-  - qtconsole=5.3.1=pyhd8ed1ab_0
-  - qtconsole-base=5.3.1=pyha770c72_0
-  - qtpy=2.1.0=pyhd8ed1ab_0
-  - readline=8.1.2=h0f457ee_0
-  - requests=2.28.1=pyhd8ed1ab_0
-  - resampy=0.3.1=pyhd8ed1ab_0
-  - scikit-learn=1.1.1=py310hffb9edd_0
   - scipy=1.8.1=py310h7612f91_0
-  - seaborn=0.11.2=hd8ed1ab_0
-  - seaborn-base=0.11.2=pyhd8ed1ab_0
-  - send2trash=1.8.0=pyhd8ed1ab_0
-  - setuptools=63.1.0=py310hff52083_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sniffio=1.2.0=py310hff52083_3
-  - soupsieve=2.3.1=pyhd8ed1ab_0
-  - sqlite=3.39.0=h4ff8645_0
-  - stack_data=0.3.0=pyhd8ed1ab_0
-  - statsmodels=0.13.2=py310hde88566_0
-  - svt-av1=0.9.1=h27087fc_0
   - sympy=1.10.1=py310hff52083_0
-  - tbb=2021.5.0=h924138e_1
-  - terminado=0.15.0=py310hff52083_0
-  - threadpoolctl=3.1.0=pyh8a188c0_0
-  - tinycss2=1.1.1=pyhd8ed1ab_0
-  - tk=8.6.12=h27826a3_0
-  - tomli=2.0.1=pyhd8ed1ab_0
-  - tornado=6.2=py310h5764c6d_0
-  - traitlets=5.3.0=pyhd8ed1ab_0
-  - tzdata=2022a=h191b570_0
-  - unicodedata2=14.0.0=py310h5764c6d_1
-  - urllib3=1.26.10=pyhd8ed1ab_0
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - webencodings=0.5.1=py_1
-  - websocket-client=1.3.3=pyhd8ed1ab_0
-  - wheel=0.37.1=pyhd8ed1ab_0
-  - widgetsnbextension=3.6.1=pyha770c72_0
-  - x264=1!161.3030=h7f98852_1
-  - x265=3.5=h924138e_3
-  - xorg-fixesproto=5.0=h7f98852_1002
-  - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libx11=1.7.2=h7f98852_0
-  - xorg-libxau=1.0.9=h7f98852_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xorg-libxext=1.3.4=h7f98852_1
-  - xorg-libxfixes=5.0.3=h7f98852_1004
-  - xorg-xextproto=7.3.0=h7f98852_1002
-  - xorg-xproto=7.0.31=h7f98852_1007
-  - xz=5.2.5=h516909a_1
-  - zeromq=4.3.4=h9c3ff4c_1
-  - zipp=3.8.0=pyhd8ed1ab_0
-  - zlib=1.2.12=h166bdaf_1
-  - zstd=1.5.2=h8a70e8d_2
+  - pip
   - pip:
-    - absl-py==1.1.0
-    - chex==0.1.3
     - colorednoise==2.1.0
     - dill==0.3.5.1
-    - dm-tree==0.1.7
-    - etils==0.6.0
-    - flatbuffers==2.0
     - jax==0.3.15
     - jaxlib==0.3.15
     - diffrax==0.2.1
     - equinox==0.6.0
-    - memory-profiler==0.60.0
     - nidaqmx==0.6.3
-    - opt-einsum==3.3.0
-    - optax==0.1.3
-    - protobuf==3.20.1
-    - ptpython==3.0.20
-    - toolz==0.12.0
     - tqdm==4.64.0
-    - typing-extensions==4.3.0
-prefix: /home/fhchl/miniconda3/envs/mod_comp
