--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,7 @@ dependencies:
   - python=3.10.5=ha86cf86_0_cpython
   - scipy=1.8.1=py310h7612f91_0
   - sympy=1.10.1=py310hff52083_0
+  - pandas=1.5.0
   - pip
   - pip:
     - colorednoise==2.1.0
@@ -22,3 +23,4 @@ dependencies:
     - equinox==0.6.0
     - nidaqmx==0.6.3
     - tqdm==4.64.0
+    - psutil
